--- a/app/src/css/styles.css
+++ b/app/src/css/styles.css
@@ -1,23 +1,3 @@
-/* Template: Organ Donation Prototype
-   Created: January 2022
-   Description: Master CSS file
-*/
-
-/*****************************************
-Table Of Contents:
-
-01. General Styles
-02. Navigation
-03. Header
-04. Forms
-05. Tables View
-06. Alerts
-07. Preloader
-******************************************/
-
-/**************************/
-/*  01. General Styles    */
-/**************************/
 
 *{
   padding: 0;
@@ -33,12 +13,9 @@ a{
 }
 
 
-html{
-  /* background-color: #94e1ff; */
-}
 
 body{
-  background: #94e1ff !important;
+  background: #D4E7C5 !important;
   font-family: "Montserrat", sans-serif !important;
 }
 
@@ -62,16 +39,8 @@ h2 {
 }
 
 h3 {
-  color: #005f82;
+  color: #294B29;
 }
-
-/* .container.visibility{
-  visibility: hidden;
-}
- */
-/**************************/
-/*     02. Navigation     */
-/**************************/
 
 #header {
   overflow: visible;
@@ -83,7 +52,7 @@ h3 {
 }
 
 nav{
-  background-color: #94e1ff;
+  background-color: #D4E7C5;
   height: 100px;
   width: 100%;
 }
@@ -100,13 +69,14 @@ nav ul li{
 }
 
 nav ul li a{
-  color: #005f82;
+  color: #99BC85;
   font-size: 18px;
   font-weight: 600;
   padding: 7px 12px;
   border-radius: 4px;
   
 }
+
 
 a.active,a:hover{
   /* background: #fff; */
@@ -155,9 +125,10 @@ img.nav-logo{
   flex-direction: column;
   align-items: center;
   width: 310px;
-  background: #005f82;
+  background: #99BC85;
   padding: 20px;
   border-radius: 12px;
+  margin-top: -2px;
   color: #fff;
 }
 
@@ -215,7 +186,7 @@ img.nav-logo{
 .btn-primary.custom{
   display: block;
   width: 100%;
-  background-color: #005f82;
+  background-color: #99BC85;
   border: none;
   font-size: 1.5em;
   font-weight: 600;
@@ -229,7 +200,7 @@ img.nav-logo{
 }
 
 .btn-primary.custom:hover{
-  background-color: #004964;
+  background-color: #B3A398;
 }
 
 .btn-primary.search{
@@ -238,16 +209,26 @@ img.nav-logo{
   align-items: center;
   justify-content: center;
   width: 60%;
+  background-color: #436850;
+  border:none;
+  padding: 15px;
+}
+
+.btn-primary.search:hover{
+  background-color: #294B29;
 }
 
 .btn-primary.homepage{
-  background-color: #005f82;
+  background-color: #99BC85;
   border: none;
+  padding: 13px 20px;
 }
 
 .btn-primary.homepage:hover{
-  background-color: #004964;
+  background-color: #B3A398;
 }
+
+
 
 /*********************/
 /*   04. Forms       */
@@ -255,20 +236,21 @@ img.nav-logo{
 
 .col-md-4.form-bg{
   color: #fff;
-  background-color: #005f82;
+  background-color: #99BC85;
   border-radius: 8px;
-  padding: 15px 29px;
+  padding: 15px 30px;
 }
 
 .col-md-4 p{
   font-weight: 600;
+  padding: 3px;
 }
 
 .row h3{
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #005f82;
+  color: #294B29;
   font-weight: 700;
   padding: 10px;
 }
@@ -316,6 +298,15 @@ input[type="submit"]:hover {
   align-items: center;
   justify-content: center;
   width: 60%;
+  background-color: #294B29;
+  border-color: #294B29;
+  padding: 15px;
+}
+
+.btn-primary.register:hover
+{
+  background-color: #B3A398;
+  border-color: #B3A398;
 }
 
 #register{
@@ -323,6 +314,7 @@ input[type="submit"]:hover {
   align-items: center;
   justify-content: center;
   padding: 8px;
+
 }
 
 
@@ -334,7 +326,7 @@ input[type="submit"]:hover {
 #group label span{
   position: relative;
   display: inline-block;
-  background-color: #004964;
+  background-color: #436850;
   color: #fff;
   margin: 5px 2px;
   padding: 10px 20px;
@@ -362,7 +354,7 @@ input[type="submit"]:hover {
 }
 
 #group input[type="checkbox"]:checked ~ span{
-  color: #005f82;
+  color: #99BC85;
   background: #fff;
 }
 
@@ -372,40 +364,10 @@ input[type="submit"]:hover {
 }
 
 #group input[type="radio"]:checked ~ span{
-  color: #005f82;
+  color: #99BC85;
   background: #fff;
 }
 
-/* .btn-warning.btn-1{
-  font-size: 24px;
-  color: #fff;
-  background-color: #0079a8;
-  border-color: #ffffff00;
-  position: relative;
-  border-radius: 8px;
-  transform: translateX(350%);
-  padding: 15px 15px 0px 15px ;
-  margin: 0;
-}
-
-.btn-warning.btn-1:hover{
-  color: #fff;
-  background-color: #005f82;
-}
-
-
-.btn:hover {
-  color: #212529;
-  text-decoration: none;
-}
- */
-/* .custom-control-input:disabled ~ .custom-control-label {
-  color: #ffffff;
-} */
-
-/*********************/
-/*  05. Table view   */
-/*********************/
 
 .content-table{
   border: 1px solid black;
@@ -424,7 +386,7 @@ td {
 }
 
 th {
-    background-color: #005f82;
+    background-color: #99BC85;
     color: #ffffff;
     text-align: center;
     padding: 15px;
@@ -452,30 +414,8 @@ tr:hover {
   text-align: center;
 }
 
-#PledgeMessage{
-  text-align: center;
-}
 
-.verification{
-  width: 100%;
-  background-color: #005f82;
-  border-radius: 8.5px;
-  padding: 25px;
-  margin: 10px 0px;
-}
 
-.verification h2{
-  text-align: center;
-  font-weight: 600;
-}
-
-.verification.hidden{
-  visibility: hidden;
-}
-
-/*********************/
-/*    06. Alerts     */
-/*********************/
 
 #DonorInputCheck{
   color: #fff;
